[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-scrape-comments"
version = "0.1.0"
description = "Telegram channel posts & comments scraper (JSONL per channel)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Your Name"}]
dependencies = [
  "telethon>=1.36.0",
  "tqdm>=4.66.0"
]

[project.scripts]
tg-scrape = "tg_scrape_comments.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
